#
# Makefile.am
#
# Part of librfn (a general utility library from redfelineninja.org.uk)
#
# Copyright (C) 2012, 2013 Daniel Thompson <daniel@redfelineninja.org.uk> 
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as published
# by the Free Software Foundation; either version 3 of the License, or
# (at your option) any later version.
#


ACLOCAL_AMFLAGS = -I m4

bin_PROGRAMS =
lib_LIBRARIES =
noinst_HEADERS =
noinst_LIBRARIES =
noinst_PROGRAMS =
BUILT_SOURCES =
CLEANFILES =
TESTS =
TESTS_ENVIRONMENT=$(VALGRIND)

include Makefile-librfn.am
